--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Click_ Hero</string>
     <string name="click_hero">Click Hero</string>
     <string name="aimless_clicking">aimless clicking</string>
+    <string name="click">click</string>
 </resources>
