--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="click_hero">Click Hero</string>
     <string name="aimless_clicking">aimless clicking</string>
     <string name="click">click</string>
+    <string name="number_counter">1</string>
 </resources>
