--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="aimless_clicking">aimless clicking</string>
     <string name="click">click</string>
     <string name="number_counter">1</string>
+    <string name="level">Level 1/10</string>
 </resources>
